# sfml-dynamic-light-demo

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/: DSUtils.hpp  EvenShape.hpp  Game.hpp  LightSource.hpp  Primitive.hpp  Square.hpp
realtime-light-shadow-2D/: CMakeLists.txt
realtime-light-shadow-2D/dependencies/sfml/: CMakeLists.txt
realtime-light-shadow-2D/src/: CMakeLists.txt  main.cpp
shaders/: shader.frag
src/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Caster.hpp  Edge.hpp  EdgeShape.cpp  EdgeShape.hpp  Game.cpp  Game.hpp  Primitive.hpp  RectObject.cpp  RectObject.hpp  Vec2f.cpp  Vec2f.hpp  Vec2fUtil.cpp  Vec2fUtil.hpp  Vec2f_util.hpp  main.cpp
tests/: CMakeLists.txt
